Experiment with the code

--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Surrealista, el periódico de los surrealistas</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <nav></nav>
 
+  <img class="logostyles" src="resources/chomskyfontlogo.png" alt="El Surrealista logo">
+
   <main>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section class="articlestyle">
+      <img src="resources/old-traditional-shrine-roof-against-sky.jpeg" alt="Old Asian shrine">
+      <h3>El Asombroso Descubrimiento del Jazz en la Grecia Clásica</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit hic odio neque quo saepe incidunt optio eaque, ut dolor explicabo iure tempora beatae nulla deleniti earum veniam assumenda esse rem.</p>
+    </section>
+    <section class="articlestyle">
+      <img src="resources/alice-in-wonderland.png" alt="Caricatura de Alicia en el país de las maravillas">
+      <h3>Los Personajes de "Alicia en el País de las Maravillas" y su Paralelismo con Grandes Filósofos de la Historia</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident voluptas dolores maiores doloremque sapiente rerum, odit ipsum aspernatur magnam tenetur doloribus nobis quasi similique non aliquid ex pariatur deserunt. Aliquid!</p>
+    </section>
+    <section class="articlestyle">
+      <img src="resources/socrates.jpg" alt="Sócrates">
+      <h3>El Origen Misterioso de la Palabra "Ajetreo" en el Griego Clásico</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, id ipsam ad perspiciatis eligendi exercitationem illum, obcaecati nihil quis, consequatur enim accusantium perferendis! Repudiandae quasi, qui totam vel maiores nam?</p>
+    </section>
     <section></section>
     <section></section>
     <section></section>
